Bug 1123269: Better fix for bug 1121876 r=cpearce